Do not bother to ask the user for CD details (like device name or path on the CD) if we can find CDs (i.e. media, not drives) automagically and check the standard paths on it.

If we find multiple CDs, offer a menu to select showing the volume
name. If something goes wrong, fall back to the manual input method.

In typical installs this makes us just proceed with extracting the sets
after selecting "install from CD/DVD", w/o any further interaction.

As a side effect fixes PR 43012.
XXX new messages need translations.